2_packer/k8s_configuration/axway_apim_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: axway-apim-service
  namespace: default
  labels:
    app: apimgr
spec:
  type: NodePort
  ports:
  - name: api-manager-admin
    port: 8075
    targetPort: 8075
    nodePort: 30075

  externalTrafficPolicy: Cluster
  selector:
    app: apimgr
    
---

apiVersion: v1
kind: Service
metadata:
  name: axway-apig-service
  namespace: default
  labels:
    app: anm
spec:
  type: NodePort
  ports:
  - name: api-gateway-admin
    port: 8075
    targetPort: 8090
    nodePort: 30090

  externalTrafficPolicy: Cluster
  selector:
    app: anm
    
---
apiVersion: v1
kind: Service
metadata:
  name: axway-api-service
  namespace: default
  labels:
    app: traffic
spec:
  type: NodePort
  ports:
  - name: api-traffic
    port: 8065
    targetPort: 8065
    nodePort: 30065

  externalTrafficPolicy: Cluster
  selector:
    app: traffic
