2_packer/k8s_configuration/nginx_ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: default
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  ports:
  - name: port80
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: port443
    port: 443
    targetPort: 443
    nodePort: 30443
  - name: port8088
    port: 8088
    targetPort: 8088
    nodePort: 30088
  externalTrafficPolicy: Cluster
  selector:
    app: my-release-nginx-ingress
